<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/Picture" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <ProgressBar
                android:indeterminate="false"
                android:indeterminateDrawable="@drawable/progressbar"
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:visibility="gone"
                android:layout_centerInParent="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/pb"/>

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Accuracy"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textview_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RecRes"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/textview1"
                android:layout_marginTop="35dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/textview_2"
                app:layout_constraintStart_toStartOf="@id/textview_2"
                app:layout_constraintEnd_toEndOf="@id/textview_2"
                app:layout_constraintBottom_toBottomOf="@id/textview_2"
                android:background="@drawable/shape_white_corner"/>

            <TextView
                android:id="@+id/textview_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textview_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:text="@string/Recognizing"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                android:text="@string/FeedBack2"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:id="@+id/fanKui"
                android:layout_marginTop="8dp"
                />


            <TextView
                android:id="@id/BaiKe"
                android:layout_width="130dp"
                android:layout_height="28dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/Wiki"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fanKui" />

            <TextView
                android:id="@+id/baike_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_white_corner"
                android:minHeight="100dp"
                android:padding="15dp"
                android:text="@string/None"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BaiKe" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>