<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <TextView
        android:id="@+id/textView3"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.rayjin.seai.StackCard
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signup_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <View
                android:id="@+id/signup_view"
                android:layout_width="300dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,4:5"
                android:background="@drawable/view_bg_plus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="@id/signup_view"
                app:layout_constraintEnd_toEndOf="@id/signup_view"
                app:layout_constraintTop_toTopOf="@id/signup_view"/>

            <ImageView
                android:id="@+id/username_img_signup"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/InputUsername"
                app:srcCompat="@drawable/user"
                app:layout_constraintStart_toStartOf="@id/signup_view"
                app:layout_constraintEnd_toStartOf="@id/username_et_signup"
                app:layout_constraintTop_toTopOf="@id/username_et_signup"
                app:layout_constraintBottom_toBottomOf="@id/username_et_signup"/>

            <EditText
                android:id="@+id/username_et_signup"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_view_bg"
                android:inputType="textPersonName"
                android:hint="@string/InputUsername"
                android:autofillHints="username"
                android:textSize="14sp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintStart_toEndOf="@id/username_img_signup"
                app:layout_constraintEnd_toEndOf="@id/signup_view"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                app:layout_constraintBottom_toTopOf="@id/password_et_signup"/>

            <ImageView
                android:id="@+id/password_img_signup"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/InputPassword"
                app:srcCompat="@drawable/password"
                app:layout_constraintStart_toStartOf="@id/signup_view"
                app:layout_constraintEnd_toStartOf="@id/password_et_signup"
                app:layout_constraintTop_toTopOf="@id/password_et_signup"
                app:layout_constraintBottom_toBottomOf="@id/password_et_signup"/>

            <EditText
                android:id="@+id/password_et_signup"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_view_bg"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:hint="@string/InputPassword"
                android:textSize="14sp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintStart_toEndOf="@id/password_img_signup"
                app:layout_constraintEnd_toEndOf="@id/signup_view"
                app:layout_constraintTop_toBottomOf="@id/username_et_signup"
                app:layout_constraintBottom_toTopOf="@id/password2_et_signup"/>


            <ImageView
                android:id="@+id/password2_img_signup"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/InputAgain"
                app:srcCompat="@drawable/password"
                app:layout_constraintStart_toStartOf="@id/signup_view"
                app:layout_constraintEnd_toStartOf="@id/password2_et_signup"
                app:layout_constraintTop_toTopOf="@id/password2_et_signup"
                app:layout_constraintBottom_toBottomOf="@id/password2_et_signup"/>

            <EditText
                android:id="@+id/password2_et_signup"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_view_bg"
                android:inputType="textPassword"
                android:hint="@string/InputAgain"
                android:autofillHints="password"
                android:textSize="14sp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintStart_toEndOf="@id/password2_img_signup"
                app:layout_constraintEnd_toEndOf="@id/signup_view"
                app:layout_constraintTop_toBottomOf="@id/password_et_signup"
                app:layout_constraintBottom_toTopOf="@id/signup_bt"/>


            <Button
                android:id="@+id/signup_bt"
                android:text="@string/SignUp2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                app:layout_constraintDimensionRatio="H,9:29"
                app:layout_constraintStart_toStartOf="@id/password2_img_signup"
                app:layout_constraintTop_toBottomOf="@id/password2_et_signup"
                app:layout_constraintEnd_toEndOf="@id/password2_et_signup"
                app:layout_constraintBottom_toBottomOf="@id/signup_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/login_view"
                android:layout_width="300dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,4:5"
                android:background="@drawable/view_bg_plus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignIn"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="@id/login_view"
                app:layout_constraintEnd_toEndOf="@id/login_view"
                app:layout_constraintTop_toTopOf="@id/login_view"/>

            <ImageView
                android:id="@+id/username_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/InputUsername"
                app:srcCompat="@drawable/user"
                app:layout_constraintStart_toStartOf="@id/login_view"
                app:layout_constraintEnd_toStartOf="@id/username_et"
                app:layout_constraintTop_toTopOf="@id/username_et"
                app:layout_constraintBottom_toBottomOf="@id/username_et"/>

            <EditText
                android:id="@+id/username_et"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_view_bg"
                android:inputType="textPersonName"
                android:hint="@string/InputUsername"
                android:autofillHints="username"
                android:textSize="14sp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintStart_toEndOf="@id/username_img"
                app:layout_constraintEnd_toEndOf="@id/login_view"
                app:layout_constraintTop_toBottomOf="@id/textView8"
                app:layout_constraintBottom_toTopOf="@id/password_et" />

            <ImageView
                android:id="@+id/password_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/InputPassword"
                app:srcCompat="@drawable/password"
                app:layout_constraintStart_toStartOf="@id/login_view"
                app:layout_constraintEnd_toStartOf="@id/password_et"
                app:layout_constraintTop_toTopOf="@id/password_et"
                app:layout_constraintBottom_toBottomOf="@id/password_et"/>

            <EditText
                android:id="@+id/password_et"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_view_bg"
                android:inputType="textPassword"
                android:hint="@string/InputPassword"
                android:autofillHints="password"
                android:textSize="14sp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintStart_toEndOf="@id/password_img"
                app:layout_constraintEnd_toEndOf="@id/login_view"
                app:layout_constraintTop_toBottomOf="@id/username_et"
                app:layout_constraintBottom_toTopOf="@id/login_bt"/>

            <Button
                android:id="@+id/login_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/SignIn2"
                android:textSize="16sp"
                android:background="@drawable/button"
                app:layout_constraintDimensionRatio="H,9:29"
                app:layout_constraintStart_toStartOf="@id/password_img"
                app:layout_constraintEnd_toEndOf="@id/password_et"
                app:layout_constraintTop_toBottomOf="@id/password_et"
                app:layout_constraintBottom_toBottomOf="@id/login_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.rayjin.seai.StackCard>
</androidx.constraintlayout.widget.ConstraintLayout>